<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Panel"
    tools:context=".UserDetailsActivity">

    <ImageView
        android:id="@+id/avatar_img"
        style="@style/AvatarIcon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar_icon"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/name"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/temp_title"
        android:textAlignment="textStart"
        android:singleLine="true"
        android:ellipsize="marquee"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/avatar_img"
        app:layout_constraintTop_toTopOf="@+id/avatar_img" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/username"
        style="@style/TextSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/temp_subtitle"
        android:textAlignment="textStart"
        android:singleLine="true"
        android:ellipsize="marquee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/company"
        style="@style/TextSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/temp_company"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/location"
        style="@style/TextSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/temp_location"
        android:textAlignment="textStart"
        android:ellipsize="marquee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/company"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_img">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/panel_hor_margin"
            android:layout_marginRight="@dimen/panel_hor_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/num_of_repo"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_repository" />

            <TextView
                android:textColor="@android:color/white"
                style="@style/TextParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/panel_hor_margin"
            android:layout_marginRight="@dimen/panel_hor_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/followers"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_follower" />

            <TextView
                android:textColor="@android:color/white"
                style="@style/TextParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/panel_hor_margin"
            android:layout_marginRight="@dimen/panel_hor_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textColor="@android:color/white"
                android:id="@+id/followings"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_following" />

            <TextView
                android:textColor="@android:color/white"
                style="@style/TextParagraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followings" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            style="@style/Button.LightColor"
            android:id="@+id/follow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_hor_margin"
            android:layout_marginRight="@dimen/button_hor_margin"
            android:text="@string/follow" />

        <Button
            style="@style/Button.LightColor"
            android:id="@+id/github_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_hor_margin"
            android:layout_marginRight="@dimen/button_hor_margin"
            android:text="@string/github" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/followerTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Panel.Tab.Switcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/followerPager"
        android:layout_width="0dp"
        style="@style/Panel.Tab"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followerTabs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_green"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loading_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/followerPager"
        app:layout_constraintEnd_toEndOf="@+id/followerPager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followerTabs"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>